<resources>
    <string name="app_name">Corona Test Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id_sample">OÖ…1234</string>
    <string name="place_sample">linz</string>
    <string name="date_sample">YYYY-MM-DDTHH:mm</string>
    <string name="create_button">Erstellen</string>
    <string name="daily_overview_button">Tagesübersicht</string>
    <string name="date_time_label">Datum</string>
    <string name="result_label">Ergebnis</string>
    <string name="place_label">Standort</string>
    <string name="save_button">speichern</string>
    <string name="date_time_label_hint">dd.MM.yyyy hh:mm</string>
    <string name="positive_area_label">positiv</string>
    <string name="negative_area_label">negativ</string>
    <string name="positive_negative_diagram_title">Positive/Negative Diagram</string>
    <string name="test_count_title">Tests pro Standort</string>
</resources>