<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputScreenFragment">

    <TextView
        android:id="@+id/idField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_sample"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/formContaner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formContaner"
        android:layout_width="411dp"
        android:layout_height="234dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idField">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="29dp" />

        <TextView
            android:id="@+id/dateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_time_label"
            app:layout_constraintBottom_toTopOf="@+id/resultLabel"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_label"
            app:layout_constraintBottom_toTopOf="@+id/placeLabel"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/dateLabel" />

        <TextView
            android:id="@+id/placeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/resultLabel" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="resultLabel,dateLabel,placeLabel"
            tools:layout_editor_absoluteX="409dp" />

        <EditText
            android:id="@+id/dateField"
            android:layout_width="252dp"
            android:layout_height="61dp"
            android:ems="10"
            android:hint="@string/date_time_label_hint"
            android:importantForAutofill="no"
            android:inputType="date|textUri|time"
            android:labelFor="@id/dateLabel"
            app:layout_constraintBaseline_toBaselineOf="@+id/dateLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/barrier2"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        <Spinner
            android:id="@+id/resultField"
            android:layout_width="250dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toTopOf="@+id/placeField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/barrier2"
            app:layout_constraintTop_toBottomOf="@+id/dateField"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/placeField"
            android:layout_width="250dp"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="@string/place_label"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/place_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/placeLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/barrier2"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="371dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formContaner">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>